# detector_work

./: .gitignore  CMakeLists.txt  README.md  项目总结.txt
analysis/: plot_results.C
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimulationConfig.hh  SteppingAction.hh
macros/: bnct_shell.mac  bnct_uniform.mac  gamma.mac  proton.mac  vis.mac
scripts/: make_bnct_scan_macros.py  run_all.sh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
